--- a/development.env
+++ b/development.env
@@ -1,2 +1,3 @@
 STRIPE_API_KEY=pk_test_UPEueEEYg8MWSoDJB8woTAIU
 STRIPE_SUBSCRIBE_ENDPOINT=/subscribe-test
+AUTH0_CONNECTION=Staging-Username-Password-Authentication
