--- a/production.env
+++ b/production.env
@@ -1,2 +1,3 @@
 STRIPE_API_KEY=pk_live_fPIQmxeFdNKTk0csUrYNZ6um
 STRIPE_SUBSCRIBE_ENDPOINT=/subscribe
+AUTH0_CONNECTION=Username-Password-Authentication
